--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ pickle-email-*.html
 # Environment files that may contain sensitive data
 .env
 .powenv
+app.yaml
 
 # tilde files are usually backup files from a text editor
 *~
